--- a/hd.css
+++ b/hd.css
@@ -30,7 +30,7 @@ div#hudslider {
     position: fixed;
     width: 4%;
     aspect-ratio: 1;
-    background-color:blueviolet;
+    background-color: blueviolet;
     left: 10px;
     top: 10px;
     border-radius: 50%;
@@ -53,7 +53,8 @@ div#odometer {
 
 }
 
-div#redx, div#greenw {
+div#redx,
+div#greenw {
     position: fixed;
     font-weight: bold;
     font-family: sans-serif;
@@ -72,4 +73,57 @@ div#greenw {
 
 .state {
     transition: opacity 0.2s;
+}
+
+
+#cardparent {
+    perspective: 500px;
+    transform-style: preserve-3d;
+}
+#card {
+    position: fixed;
+    background: url("hellosticker.svg");
+    background-size: 100%;
+    width: 60%;
+    aspect-ratio: 1.4;
+    border: 2px solid green;
+    font-size: 600%;
+    text-align: center;
+    perspective: 100px;
+}
+
+
+
+#hourglass {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+
+#hourglass:after {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 8px;
+    box-sizing: border-box;
+    border: 32px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: hourglass 1.2s infinite;
+}
+
+@keyframes hourglass {
+    0% {
+        transform: rotate(0);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+    50% {
+        transform: rotate(900deg);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    100% {
+        transform: rotate(1800deg);
+    }
 }
