--- a/hd.css
+++ b/hd.css
@@ -2,6 +2,31 @@ body {
     background: lavender;
 }
 
+
+div#horizon {
+    z-index: -2;
+    position: fixed;
+    width: 200%;
+    aspect-ratio: 424/260;
+}
+
+div#cockpit {
+    z-index: -1;
+    position: fixed;
+    left: 50%;
+    top: 70%;
+    width: 120%;
+    margin-top: 50%;
+    aspect-ratio: 1028 / 720;
+    transform: translate(-50%, -50%);
+    transition: margin 2s ease;
+}
+
+div#cockpit img, div#horizon img {
+    width: 100%;
+    height: 100%;
+}
+
 div#hudouter {
     position: fixed;
     left: 50%;
@@ -50,10 +75,29 @@ div#odometer {
     left: 66%;
     bottom: 6%;
     font-size: 280%;
-
 }
 
-div#redx,
+div.ping {
+    position: fixed;
+    width: 9%;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 4px solid lightgreen;
+    animation: fadeout 2s;
+    animation-fill-mode: forwards;
+}
+
+img#redx {
+    position: fixed;
+    width: 70%;
+    aspect-ratio: 124 / 36;
+    border-radius: 2vmax;
+    left: 15%;
+    top: 15%;
+    transition: top 6s ease-out, opacity 2s linear;
+}
+
+
 div#greenw {
     position: fixed;
     font-weight: bold;
@@ -144,3 +188,15 @@ div#greenw {
     }
 }
 
+
+@keyframes fadeout {
+    0% {
+        opacity: 1;
+        animation-timing-function: ease-out;
+        transform: none;
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.4);
+    }
+}
