--- a/hd.css
+++ b/hd.css
@@ -4,14 +4,18 @@ body {
 
 
 div#horizon {
-    z-index: -2;
+    z-index: -3;
     position: fixed;
     width: 200%;
     aspect-ratio: 424/260;
 }
 
+div#clouds {
+    z-index: -2;
+}
+
 div#cockpit {
-    z-index: -1;
+    z-index: 0;
     position: fixed;
     left: 50%;
     top: 70%;
@@ -22,7 +26,7 @@ div#cockpit {
     transition: margin 2s ease;
 }
 
-div#cockpit img, div#horizon img {
+img.fill {
     width: 100%;
     height: 100%;
 }
@@ -55,26 +59,25 @@ div#hudslider {
     position: fixed;
     width: 4%;
     aspect-ratio: 1;
-    background-color: blueviolet;
     left: 10px;
     top: 10px;
+    background: mediumspringgreen;
     border-radius: 50%;
+    opacity: .8;
 }
 
 div#hudtarget {
     position: fixed;
     width: 8%;
     aspect-ratio: 1;
-    background-color: yellow;
-    border-radius: 50%;
-    opacity: 0.8;
+   opacity: 0.8;
 }
 
 div#odometer {
     position: fixed;
-    left: 66%;
+    left: 26%;
     bottom: 6%;
-    font-size: 280%;
+    font-size: 400%;
 }
 
 div.ping {
@@ -95,6 +98,12 @@ img#redx {
     left: 15%;
     top: 15%;
     transition: top 6s ease-out, opacity 2s linear;
+}
+
+
+div#clouds img {
+    position: fixed;
+    animation-timing-function: linear;
 }
 
 
@@ -198,5 +207,32 @@ div#greenw {
     100% {
         opacity: 0;
         transform: scale(1.4);
+    }
+}
+
+@keyframes swoop {
+    0% {
+        opacity: 0;
+        margin-top: 2%;
+    }
+    10% {
+        opacity: 0;
+        margin-top: 0%;
+    }
+    20% {
+        opacity: 0.7;
+        margin-top: 0;
+    }
+    80% {
+        opacity: 0.7;
+        margin-top: 40%;
+    }
+    90% {
+        opacity: 0;
+        margin-top: 10%;
+    }
+    100% {
+        opacity: 0;
+        margin-top: 10%;
     }
 }
