--- a/hd.css
+++ b/hd.css
@@ -2,6 +2,10 @@ body {
     background: lavender;
 }
 
+@font-face {
+    font-family: marker;
+    src: url(PermanentMarker-Regular.ttf);
+}
 
 div#horizon {
     z-index: -3;
@@ -68,9 +72,9 @@ div#hudslider {
 
 div#hudtarget {
     position: fixed;
-    width: 8%;
+    width: 7%;
     aspect-ratio: 1;
-   opacity: 0.8;
+   /* opacity: 0.8; */
 }
 
 div#odometer {
@@ -147,11 +151,14 @@ div#greenw {
     animation: carddance 10s ease infinite;
 }
 #name {
+    font-family: marker;
     position: absolute;
     bottom: 10%;
+    height: 40%;
     width: 100%;
     text-align: center;
     font-size: 16vmin;
+    line-height: 13vmin;
     transition: 4s ease-out;
 }
 
@@ -213,26 +220,22 @@ div#greenw {
 @keyframes swoop {
     0% {
         opacity: 0;
-        margin-top: 2%;
-    }
-    10% {
-        opacity: 0;
-        margin-top: 0%;
+        transform: translate(0, 2%);
     }
     20% {
         opacity: 0.7;
-        margin-top: 0;
+        transform: translate(0, 0);
     }
     80% {
         opacity: 0.7;
-        margin-top: 40%;
+        transform: translate(0, 40%);
     }
     90% {
         opacity: 0;
-        margin-top: 10%;
+        transform: translate(0, 40%);
     }
     100% {
         opacity: 0;
-        margin-top: 10%;
+        transform: translate(0, 2%);
     }
 }
