--- a/hd.css
+++ b/hd.css
@@ -1,5 +1,6 @@
 body {
     background: lavender;
+    overflow: clip;
 }
 
 @font-face {
@@ -33,6 +34,12 @@ div#cockpit {
 img.fill {
     width: 100%;
     height: 100%;
+}
+
+img#logo {
+    display: fixed;
+    width: 100%;
+    margin-top: -10px;
 }
 
 div#hudouter {
@@ -79,8 +86,8 @@ div#hudtarget {
 
 div#odometer {
     position: fixed;
-    left: 26%;
-    bottom: 6%;
+    left: 12%;
+    bottom: 4%;
     font-size: 400%;
 }
 
@@ -134,6 +141,9 @@ div#greenw {
 
 
 #cardparent {
+    position: fixed;
+    left: 50%;
+    top: 35%;
     perspective: 800px;
     transform-style: preserve-3d;
 }
@@ -160,6 +170,7 @@ div#greenw {
     font-size: 16vmin;
     line-height: 13vmin;
     transition: 4s ease-out;
+    white-space: nowrap;
 }
 
 @keyframes carddance {
@@ -170,14 +181,14 @@ div#greenw {
 }
 
 
-#hourglass {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
+#spinners {
+    position: fixed;
 }
 
-#hourglass:after {
+.hourglass {
+    position: fixed;
+}
+.hourglass:after {
     content: " ";
     display: block;
     border-radius: 50%;
@@ -190,17 +201,38 @@ div#greenw {
     animation: hourglass 1.2s infinite;
 }
 
+#spinr {
+    left: 30%;
+    top: 40%;
+}
+#spinb {
+    left: 70%;
+    top: 40%;
+}
+#spinw {
+    left: 50%;
+    top: 60%;
+}
+#spinr:after {
+    border: 32px solid red;
+    border-color: red transparent red transparent;
+}
+#spinb:after {
+    border: 32px solid blue;
+    border-color: blue transparent blue transparent;
+}
+
 @keyframes hourglass {
     0% {
         transform: rotate(0);
         animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
     }
     50% {
-        transform: rotate(900deg);
+        transform: rotate(720deg);
         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     }
     100% {
-        transform: rotate(1800deg);
+        transform: rotate(1080deg);
     }
 }
 
